[project]
name = "mock-bsc-app"
version = "0.1.0"
description = "Small mock BSC source application for AI docsite update demos."
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
